set(COPYRIGHT_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/copyright)
set(COPYRIGHT_DIR share/doc/somatic-sniper${EXE_VERSION_SUFFIX})

add_custom_target(doc ALL DEPENDS ${COPYRIGHT_INPUT})

install(FILES ${COPYRIGHT_INPUT}
    DESTINATION ${COPYRIGHT_DIR}
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
